# UniversalMind

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  config.local.yaml.example  config.yaml  pyproject.toml  requirements.txt  run_experiment.py
analysis/: generate_report.py  plot_results.py
docs/: architecture.md
godelion_extended/: __init__.py  config.py
godelion_extended/agents/: __init__.py  communication.py  memory.py  policy.py  simple_policy.py
godelion_extended/analytics/: __init__.py  logger.py  reporting.py  visualization.py
godelion_extended/environments/: __init__.py  grid_world.py
godelion_extended/evolution/: __init__.py  archive.py  mutation.py  selection.py
godelion_extended/experiments/: __init__.py  base.py  minimal_coordination.py  rsi_evolution.py  universe_dialogue.py
godelion_extended/metrics/: __init__.py  coordination.py  emergence.py  information_theory.py
godelion_extended/rsi/: __init__.py  meta_learner.py  mutation_strategies.py
godelion_extended/universe_dialogue/: __init__.py  agent.py  analysis.py  environment.py  system.py
output/universe_dialogue_20260613_215348_444312/: config.json
tests/: test_agents.py  test_environment.py  test_evolution.py  test_metrics.py  test_universe_dialogue.py
universal_mind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
