[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-mind"
version = "0.1.0"
description = "Recursive Self-Improvement & Multi-Agent Coordination Research Framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["rsi", "multi-agent", "emergence", "self-improvement", "evolution", "coordination"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.1",
]
analysis = [
    "scipy>=1.10",
    "scikit-learn>=1.2",
]

[project.urls]
Source = "https://github.com/zenithbrew/UniversalMind"
Issues = "https://github.com/zenithbrew/UniversalMind/issues"

[tool.setuptools.packages.find]
include = ["godelion_extended*", "analysis*"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
